Thu Mar 13 22:38:28 2003  Tim Janik  <timj@gtk.org>

	* docs/site-news.texi: announced release.

Thu Mar 13 21:42:45 2003  Tim Janik  <timj@gtk.org>

	* configure.in: up version to 0.5.0, released beast-0.5.0.tar.gz.
	
	* TODO, README, docs/release-notes.texi: release updates.
	
	* beast-gtk/bstapp.c (bst_app_operate): popup release-notes dialog
	as ordinary navigatable text window.

	* beast-gtk/bstapp.c (bst_app_update_can_operate): in lack of a working
	gtk_item_factory_get_widget_by_action() ($*=%!!!) hardcode disabling
	of /File/Save, /Edit/Undo and /Edit/Redo.

	* beast-gtk/gxk/gxktexttools.c (gxk_scroll_text_create): disable "Find"
	button until its functionality is implemented.

Thu Mar 13 18:04:21 2003  Tim Janik  <timj@gtk.org>

	* test/*.bse: storage format fixups.

Thu Mar 13 15:54:28 2003  Tim Janik  <timj@gtk.org>

	* configure.in: applied patch from Junichi Uekawa <dancer@debian.org>
	which provides --enable-devdsp and --enable-devmidi options to force
	driver builds for these devices, bypassing auto-detection.

	* beast-gtk/bsttrackview.c (bst_track_view_create_tree): fix synthesizer
	column.

	* beast-gtk/gxk/gxktexttools.[hc] (gxk_scroll_text_create): adjust
	default values and possible flag sets.

	* beast-gtk/*.c: fixed callers of gxk_scroll_text_create().

Tue Mar 11 06:46:19 2003  Tim Janik  <timj@gtk.org>

	* configure.in: up version to 0.5.0-rc1, released rc tarball.

Mon Mar 10 11:14:28 2003  Tim Janik  <timj@gtk.org>

	* configure.in: don't build docs if we're not configured for @DVLBUILD@.
	provide am-conditional IF_BUILDDOCS to special case doc builds.

Mon Mar 10 09:24:27 2003  Tim Janik  <timj@gtk.org>

	* remove topdir gsl/ link, fixed includes.

Mon Mar 10 08:54:23 2003  Tim Janik  <timj@gtk.org>

	* configure.in: added @DVLBUILD@ ac substitution to disable
	development build rules.
	
	* */Makefile.am: more srcdir!=builddir fixes, adaptions to @DVLBUILD@.

Mon Mar 10 05:43:37 2003  Tim Janik  <timj@gtk.org>
